[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt_tui"
version = "0.5.0"
authors = [
    {name = "Jiayi Pan", email = "i@jiayipan.me"},
]
description = "A simple TUI interface for ChatGPT."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["chatbot", "tui", "chatgpt", "chatgpt_tui"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
    "httpx",
    "pyperclip",
]

[project.scripts]
catt = "chatgpt_tui.app:run"

